# pysatdownload

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: .gitignore
notebooks/: view_netcdf.ipynb
scripts/: 1_load_himawari.py  2_merge_himawari.py  3_compute_gradients.py
