[project]
name = "pysatdownload"
version = "0.1.0"
description = ""
authors = [
    {name = "Rick de Kreij",email = "r.d.kreij@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "xarray (<2025.7.1)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "earthaccess (>=0.14.0,<0.15.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "dask (>=2025.7.0,<2026.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "geographiclib (>=2.0,<3.0)",
    "cmocean (>=4.0.3,<5.0.0)",
    "pyproj (<3.7)",
    "cartopy (>=0.25.0,<0.26.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "rioxarray (>=0.19.0,<0.20.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
